# test_openai_mcp

./: .gitignore  1_helloworld.py  4_mcp_stdio.py  5_mcp_gti.py  6_single_agent_with_mcp.py  7_multi_agent_with_mcp_handoff_guardrail.py  README.md  README_CONFIG.md  agent_configs.py  llms.txt  main.ipynb  main.py  pyproject.toml
ai_agents/: __init__.py  gti_agent.py  guardrail_agent.py  opensearch_agent.py  orchestrator_agent.py  servicenow_agent.py  visualization_agent.py
config/: config_manager.py
config/environments/: base.yaml  development.yaml  production.yaml
labs/: 2_handoff.py  3_guardrail.py  4_mcp_stdio.py  6_single_agent_with_mcp.py  7_session.py  8_custom_model.py  test.txt
models/: __init__.py  gti.py  guardrail.py  opensearch.py  orchestration.py  servicenow.py  visualization.py
orchestration/: __init__.py  workflow.py
samples_files/: test.txt
